# RollerCoaster

./: CMakeLists.txt  README.md  imgui.ini
libs/: givr.h  panel.cpp  panel.h  picking_controls.cpp
models/: roller_coaster_3_ALP.txt
src/: arc_length_parameterize.cpp  arc_length_parameterize.hpp  curve_file_io.cpp  curve_file_io.hpp  frenet_frame.cpp  frenet_frame.hpp  hermite_curve.cpp  hermite_curve.hpp  imgui_panel.cpp  imgui_panel.hpp  main.cpp  speed_profile.cpp  speed_profile.hpp
